--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,7 @@ serde_json = "1.0.132"
 toml = "0.8.19"
 tempdir = "0.3.7"
 test-log = "0.2.16"
+cargo_metadata = "0.19.2"
 
 [workspace.lints.rust]
 missing_docs = "warn"
