--- a/crates/cargo-gpu/Cargo.toml
+++ b/crates/cargo-gpu/Cargo.toml
@@ -22,7 +22,7 @@ relative-path.workspace = true
 serde.workspace = true
 serde_json.workspace = true
 crossterm.workspace = true
-version_check = "0.9.5"
+semver.workspace = true
 
 [dev-dependencies]
 test-log.workspace = true
