fix git parsing with no `?` in url

--- a/crates/cargo-gpu/Cargo.toml
+++ b/crates/cargo-gpu/Cargo.toml
@@ -27,6 +27,7 @@ semver.workspace = true
 
 [dev-dependencies]
 test-log.workspace = true
+cargo_metadata = { workspace = true, features = ["builder"] }
 
 [lints]
 workspace = true
