--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,7 @@ tempdir = "0.3.7"
 test-log = "0.2.16"
 cargo_metadata = "0.19.2"
 semver = "1.0.26"
+naga = "25.0.1"
 
 # This crate MUST NEVER be upgraded, we need this particular "first" version to support old rust-gpu builds
 legacy_target_specs = { package = "rustc_codegen_spirv-target-specs", version = "0.9.0", features = ["include_str"] }
