--- a/crates/cargo-gpu/Cargo.toml
+++ b/crates/cargo-gpu/Cargo.toml
@@ -10,6 +10,10 @@ build = "build.rs"
 default-run = "cargo-gpu"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[features]
+# Enable naga support to convert spirv to wgsl
+naga = ["dep:naga"]
+
 [dependencies]
 cargo_metadata.workspace = true
 anyhow.workspace = true
@@ -24,6 +28,7 @@ serde.workspace = true
 serde_json.workspace = true
 crossterm.workspace = true
 semver.workspace = true
+naga = { workspace = true, optional = true, features = ["spv-in", "wgsl-out"] }
 
 [dev-dependencies]
 test-log.workspace = true
