--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,19 +14,20 @@ resolver = "2"
 
 [workspace.dependencies]
 spirv-builder = { git = "https://github.com/Rust-GPU/rust-gpu", rev = "3e89e6cc7b32b51db51d75b5f558ccd7ecf5b850", default-features = false }
-anyhow = "1.0.94"
+anyhow = "1.0.98"
 clap = { version = "4.5.37", features = ["derive"] }
-crossterm = "0.28.1"
-directories = "5.0.1"
-env_logger = "0.10"
+crossterm = "0.29.0"
+directories = "6.0.0"
+env_logger = "0.11.8"
 log = "0.4"
-relative-path = "1.9.3"
-serde = { version = "1.0.214", features = ["derive"] }
-serde_json = "1.0.132"
-toml = "0.8.19"
+relative-path = "2.0.1"
+serde = { version = "1.0.219", features = ["derive"] }
+serde_json = "1.0.141"
+toml = "0.9.2"
 tempdir = "0.3.7"
-test-log = "0.2.16"
-cargo_metadata = "0.19.2"
+test-log = "0.2.18"
+cargo_metadata = "0.21.0"
+cargo-util-schemas = "0.8.2"
 semver = "1.0.26"
 
 # This crate MUST NEVER be upgraded, we need this particular "first" version to support old rust-gpu builds
