--- a/crates/cargo-gpu/Cargo.toml
+++ b/crates/cargo-gpu/Cargo.toml
@@ -1,14 +1,12 @@
 [package]
 name = "cargo-gpu"
-version = "0.1.0"
-edition = "2021"
-description = "Generates shader .spv files from rust-gpu shader crates"
-repository = "https://github.com/Rust-GPU/cargo-gpu"
+description = "Generates shader .spv files from `rust-gpu` shader crates"
 readme = "../../README.md"
-keywords = ["gpu", "compiler", "rust-gpu"]
-license = "MIT OR Apache-2.0"
-default-run = "cargo-gpu"
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+version.workspace = true
+edition.workspace = true
+repository.workspace = true
+keywords.workspace = true
+license.workspace = true
 
 [dependencies]
 cargo_metadata.workspace = true
@@ -17,7 +15,6 @@ spirv-builder = { workspace = true, features = ["clap", "watch"] }
 legacy_target_specs.workspace = true
 clap.workspace = true
 directories.workspace = true
-env_logger.workspace = true
 log.workspace = true
 relative-path.workspace = true
 serde.workspace = true
@@ -29,7 +26,7 @@ dunce.workspace = true
 [dev-dependencies]
 test-log.workspace = true
 cargo_metadata = { workspace = true, features = ["builder"] }
-cargo-util-schemas = "0.8.2"
+cargo-util-schemas.workspace = true
 
 [lints]
 workspace = true
