Add `watch` feature for `cargo-gpu` library

--- a/crates/cargo-gpu-cli/Cargo.toml
+++ b/crates/cargo-gpu-cli/Cargo.toml
@@ -14,7 +14,7 @@ name = "cargo-gpu"
 path = "src/main.rs"
 
 [dependencies]
-cargo-gpu = { path = "../cargo-gpu", features = ["clap"] }
+cargo-gpu = { path = "../cargo-gpu", features = ["watch", "clap"] }
 clap.workspace = true
 log.workspace = true
 env_logger.workspace = true
