--- a/crates/cargo-gpu/Cargo.toml
+++ b/crates/cargo-gpu/Cargo.toml
@@ -11,7 +11,7 @@ license.workspace = true
 [dependencies]
 cargo_metadata.workspace = true
 anyhow.workspace = true
-spirv-builder = { workspace = true, features = ["watch"] }
+spirv-builder.workspace = true
 legacy_target_specs.workspace = true
 clap = { workspace = true, optional = true }
 directories.workspace = true
@@ -29,6 +29,8 @@ cargo_metadata = { workspace = true, features = ["builder"] }
 cargo-util-schemas.workspace = true
 
 [features]
+# Rebuilds target shader crate upon changes
+watch = ["spirv-builder/watch"]
 # Enables `clap` support for public structs
 clap = ["dep:clap", "spirv-builder/clap"]
 
