--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,7 +24,7 @@ relative-path = "2.0.1"
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.141"
 toml = "0.9.2"
-tempdir = "0.3.7"
+tempfile = "3.22"
 test-log = "0.2.18"
 cargo_metadata = "0.21.0"
 cargo-util-schemas = "0.8.2"
