--- a/crates/xtask/Cargo.toml
+++ b/crates/xtask/Cargo.toml
@@ -8,7 +8,7 @@ anyhow.workspace = true
 clap.workspace = true
 env_logger.workspace = true
 log.workspace = true
-tempdir.workspace = true
+tempfile.workspace = true
 toml.workspace = true
 
 [lints]
