--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,6 @@
 [workspace]
 members = [
+	"crates/rustc_codegen_spirv-cache",
 	"crates/cargo-gpu",
 	"crates/xtask",
 ]
@@ -12,9 +13,17 @@ exclude = [
 
 resolver = "2"
 
+[workspace.package]
+version = "0.1.0"
+edition = "2021"
+repository = "https://github.com/Rust-GPU/cargo-gpu"
+keywords = ["gpu", "compiler", "rust-gpu"]
+license = "MIT OR Apache-2.0"
+
 [workspace.dependencies]
 spirv-builder = { git = "https://github.com/Rust-GPU/rust-gpu", rev = "3df836eb9d7b01344f52737bf9a310d1fb5a0c26", default-features = false }
 anyhow = "1.0.98"
+thiserror = "2.0.12"
 clap = { version = "4.5.41", features = ["derive"] }
 crossterm = "0.29.0"
 directories = "6.0.0"
