--- a/crates/rustc_codegen_spirv-cache/Cargo.toml
+++ b/crates/rustc_codegen_spirv-cache/Cargo.toml
@@ -14,6 +14,7 @@ anyhow.workspace = true
 log.workspace = true
 directories.workspace = true
 cargo_metadata.workspace = true
+crossterm.workspace = true
 
 [dev-dependencies]
 test-log.workspace = true
