Move lockfile manifest version mismatch handling out of CLI

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,7 @@
 [workspace]
 members = [
 	"crates/rustc_codegen_spirv-cache",
+	"crates/cargo-gpu-build",
 	"crates/cargo-gpu",
 	"crates/xtask",
 ]
