--- a/crates/cargo-gpu/Cargo.toml
+++ b/crates/cargo-gpu/Cargo.toml
@@ -10,9 +10,10 @@ license.workspace = true
 default-run = "cargo-gpu"
 
 [dependencies]
-cargo-gpu-build = { path = "../cargo-gpu-build", default-features = false }
+cargo-gpu-build = { path = "../cargo-gpu-build", features = ["clap", "watch"] }
 cargo_metadata.workspace = true
 anyhow.workspace = true
+thiserror.workspace = true
 spirv-builder = { workspace = true, features = ["clap", "watch"] }
 clap.workspace = true
 env_logger.workspace = true
