Add error handling for lockfile API of `cargo-gpu-build`

--- a/crates/cargo-gpu-build/Cargo.toml
+++ b/crates/cargo-gpu-build/Cargo.toml
@@ -10,7 +10,7 @@ license.workspace = true
 [dependencies]
 rustc_codegen_spirv-cache = { path = "../rustc_codegen_spirv-cache" }
 spirv-builder.workspace = true
-anyhow.workspace = true
+thiserror.workspace = true
 semver.workspace = true
 log.workspace = true
 
