--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ members = [
 exclude = [
 	# This currently needs to be excluded because it depends on a version of `rust-gpu` that
 	# uses a toolchain whose Cargo version doesn't recognise version 4 of `Cargo.lock`.
-	"crates/shader-crate-template"
+	"crates/shader-crate-template",
 ]
 
 resolver = "2"
@@ -38,7 +38,6 @@ tempfile = "3.22"
 test-log = "0.2.18"
 cargo_metadata = "0.21.0"
 cargo-util-schemas = "0.8.2"
-semver = "1.0.26"
 dunce = "1.0.5"
 
 # This crate MUST NEVER be upgraded, we need this particular "first" version to support old rust-gpu builds
