--- a/crates/cargo-gpu/Cargo.toml
+++ b/crates/cargo-gpu/Cargo.toml
@@ -27,6 +27,7 @@ semver.workspace = true
 dunce.workspace = true
 
 [dev-dependencies]
+tempfile.workspace = true
 test-log.workspace = true
 cargo_metadata = { workspace = true, features = ["builder"] }
 cargo-util-schemas = "0.8.2"
