--- a/Cargo.toml
+++ b/Cargo.toml
@@ -59,3 +59,4 @@ partial_pub_fields = { level = "allow", priority = 1 }
 pattern_type_mismatch = { level = "allow", priority = 1 }
 std_instead_of_alloc = { level = "allow", priority = 1 }
 arbitrary_source_item_ordering = { level = "allow", priority = 1 }
+missing_inline_in_public_items = { level = "allow", priority = 1 }
