--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,14 @@ exclude = [
 
 resolver = "2"
 
+[workspace.package]
+version = "0.1.0"
+edition = "2021"
+repository = "https://github.com/Rust-GPU/cargo-gpu"
+readme = "./README.md"
+keywords = ["gpu", "compiler", "rust-gpu"]
+license = "MIT OR Apache-2.0"
+
 [workspace.dependencies]
 spirv-builder = { git = "https://github.com/Rust-GPU/rust-gpu", rev = "a30bd43db45f2bfe260051f44141e5eaffcbb4b0", default-features = false }
 anyhow = "1.0.98"
