--- a/crates/cargo-gpu/Cargo.toml
+++ b/crates/cargo-gpu/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
 name = "cargo-gpu"
-version = "0.1.0"
-edition = "2021"
+version.workspace = true
+edition.workspace = true
 description = "Generates shader .spv files from rust-gpu shader crates"
-repository = "https://github.com/Rust-GPU/cargo-gpu"
-readme = "../../README.md"
-keywords = ["gpu", "compiler", "rust-gpu"]
-license = "MIT OR Apache-2.0"
+repository.workspace = true
+readme.workspace = true
+keywords.workspace = true
+license.workspace = true
 default-run = "cargo-gpu"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
